# MonsterMaker

./: CMakeLists.txt  README.md  monster.cpp  monsterle.h  plan.xlsx
MonsterMaker/: CMakeLists.txt  MonsterMaker.cpp  MonsterMaker.h  attack.cpp  attack.h  goblin.txt  monster.cpp  monster.h  skill.cpp  skill.h  storedMonsters.csv  strManip.cpp  strManip.h
